--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "css-sass",
   "version": "0.1.0",
+  "homepage": "https://mayconcabral.github.io/natours",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@testing-library/dom": "^8.20.0",
     "@testing-library/user-event": "^14.4.3",
+    "gh-pages": "^5.0.0",
     "sass": "^1.54.9"
   }
 }
