--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "css-sass",
   "version": "0.1.0",
   "homepage": "https://mayconcabral.github.io/natours",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
