Advanced CSS & SASS :art:

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-sass",
+  "name": "natours-project",
   "version": "0.1.0",
   "homepage": "https://mayconcabral.github.io/natours",
   "private": false,
